# VesmirnyEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THEORY.md  main.cpp
include/: DIFP_Core.hpp
src/solvers/: rk4_solver.cpp  rk4_solver.hpp
vscode/: tasks.json
